--- a/vaja4.ipynb
+++ b/vaja4.ipynb
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -131,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -202,10 +202,22 @@
         "matplotlib.use('TkAgg')\n",
         "inverz = np.linalg.inv(koordinate)\n",
         "\n",
-        "plt.figure()\n",
+        "plt.figure(0)\n",
         "plt.imshow(image1, cmap=None)\n",
-        "x = plt.ginput(6)\n",
+        "x = plt.ginput(8)\n",
+        "for p in x:\n",
+        "    plt.scatter(p[0], p[1], color=\"red\", marker=\"x\")\n",
         "\n",
+        "plt.show()\n",
+        "plt.close('all')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "plt.figure()\n",
         "points_x = []\n",
         "points_y = []\n",
@@ -244,9 +256,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'skimage'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mskimage\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdraw\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpoly2mask\u001b[39m(y_coords, x_coords, shape):\n\u001b[0;32m      4\u001b[0m     \u001b[39m# y_coord = y koordinate poligona (vrstni red je pomemben!)\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[39m# x_coord = x koordinate poligona (vrstni red je pomemben!)\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     \u001b[39m# shape = dimenzije maske (height, weight)\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     fill_row_coords, fill_col_coords \u001b[39m=\u001b[39m draw\u001b[39m.\u001b[39mpolygon(y_coords, x_coords, shape)\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'skimage'"
+          ]
+        }
+      ],
       "source": [
         "from skimage import draw\n",
         "\n",
@@ -262,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
