--- a/vaja4.ipynb
+++ b/vaja4.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -204,13 +204,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
+        }
+      ],
       "source": [
         "# TODO\n",
         "import matplotlib\n",
-        "matplotlib.use('TkAgg')\n",
+        "matplotlib.use('TkCairo')\n",
+        "plt.close('all')\n",
+        "\n",
         "inverz = np.linalg.inv(koordinate)\n",
         "\n",
         "plt.figure(0)\n",
@@ -219,16 +230,6 @@
         "for p in x:\n",
         "    plt.scatter(p[0], p[1], color=\"red\", marker=\"x\")\n",
         "\n",
-        "plt.show()\n",
-        "plt.close('all')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "plt.figure(1)\n",
         "points_x = []\n",
         "points_y = []\n",
@@ -238,8 +239,7 @@
         "    points_y.append(y)\n",
         "\n",
         "plt.scatter(points_x, points_y, color=\"red\", marker=\"x\")\n",
-        "plt.show()\n",
-        "plt.close('all')"
+        "plt.show()"
       ]
     },
     {
@@ -617,7 +617,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "venvR04",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -631,11 +631,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.0"
+      "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
-        "hash": "5a1ee88120da9d9e036b50c9c64cd69d970081fbd3df65582e17c3553c62bcb0"
+        "hash": "03d84e4d91d83ec49b4e11fb78282f3a146fa0390deff3d2fe38aed70b25cc18"
       }
     }
   },
