--- a/vaja4.ipynb
+++ b/vaja4.ipynb
@@ -18,9 +18,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'d:\\\\Faks\\\\Robotika04'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import cv2\n",
         "import manus\n",
@@ -28,12 +39,14 @@
         "import matplotlib.pyplot as plt\n",
         "from matplotlib.widgets import Cursor\n",
         "\n",
-        "#%matplotlib notebook"
+        "#%matplotlib notebook\n",
+        "import os\n",
+        "os.getcwd()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -78,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -118,8 +131,8 @@
         "    plt.plot([x[i], x[i]], [0, image1.shape[0] - 1], color=\"blue\")\n",
         "    plt.plot([0, image1.shape[1] - 1], [y[i], y[i]], color=\"blue\")\n",
         "\n",
-        "\n",
-        "plt.show()"
+        "plt.show()\n",
+        "plt.close('all')"
       ]
     },
     {
@@ -142,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -154,20 +167,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 18,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(255, 212)"
-            ]
-          },
-          "execution_count": 8,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# TODO\n",
         "vS = []\n",
@@ -206,40 +208,42 @@
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# TODO\n",
+        "import numpy as np\n",
         "import matplotlib\n",
-        "matplotlib.use('TkCairo')\n",
-        "plt.close('all')\n",
+        "matplotlib.use('TkAgg')\n",
         "\n",
-        "inverz = np.linalg.inv(koordinate)\n",
-        "\n",
+        "hom_mat = np.linalg.inv(load_h('data/camera1.txt'))\n",
         "plt.figure(0)\n",
-        "plt.imshow(image1, cmap=None)\n",
-        "x = plt.ginput(8, timeout=-1)\n",
-        "for p in x:\n",
-        "    plt.scatter(p[0], p[1], color=\"red\", marker=\"x\")\n",
+        "img = plt.imread('data/camera1.jpg')\n",
+        "plt.imshow(img)\n",
+        "x_input = plt.ginput(8)\n",
+        "plt.close('all')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "x_points = []\n",
+        "y_points = []\n",
+        "\n",
+        "for point in x_input:\n",
+        "    coor = np.array([point[0], point[1], 1])\n",
+        "    l = np.dot(hom_mat,coor)\n",
+        "    x = l[0]/l[2]\n",
+        "    y = l[1]/l[2]\n",
+        "    x_points.append(x)\n",
+        "    y_points.append(y)\n",
         "\n",
         "plt.figure(1)\n",
-        "points_x = []\n",
-        "points_y = []\n",
-        "for point in x:\n",
-        "    x, y = help_function(inverz, [[point[0]], [point[1]], [1]])\n",
-        "    points_x.append(x)\n",
-        "    points_y.append(y)\n",
-        "\n",
-        "plt.scatter(points_x, points_y, color=\"red\", marker=\"x\")\n",
-        "plt.show()"
+        "plt.scatter(x_points, y_points, color='red', marker='x')\n",
+        "plt.show()\n",
+        "plt.close('all')"
       ]
     },
     {
@@ -267,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -285,9 +289,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ImportError",
+          "evalue": "cairo backend requires that pycairo>=1.14.0 or cairocffi is installed",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "File \u001b[1;32mc:\\Users\\Gasper Krevs\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\matplotlib\\backends\\backend_cairo.py:16\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 16\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mcairo\u001b[39;00m\n\u001b[0;32m     17\u001b[0m     \u001b[39mif\u001b[39;00m cairo\u001b[39m.\u001b[39mversion_info \u001b[39m<\u001b[39m (\u001b[39m1\u001b[39m, \u001b[39m14\u001b[39m, \u001b[39m0\u001b[39m):  \u001b[39m# Introduced set_device_scale.\u001b[39;00m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cairo'",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "File \u001b[1;32mc:\\Users\\Gasper Krevs\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\matplotlib\\backends\\backend_cairo.py:21\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m---> 21\u001b[0m     \u001b[39mimport\u001b[39;00m \u001b[39mcairocffi\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mcairo\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cairocffi'",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# TODO\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m matplotlib\u001b[39m.\u001b[39;49muse(\u001b[39m'\u001b[39;49m\u001b[39mTkCairo\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      4\u001b[0m image2 \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mimread(\u001b[39m\"\u001b[39m\u001b[39mdata/camera2.jpg\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m image2 \u001b[39m=\u001b[39m cv2\u001b[39m.\u001b[39mcvtColor(image2, cv2\u001b[39m.\u001b[39mCOLOR_BGR2RGB)\n",
+            "File \u001b[1;32mc:\\Users\\Gasper Krevs\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\matplotlib\\__init__.py:1156\u001b[0m, in \u001b[0;36muse\u001b[1;34m(backend, force)\u001b[0m\n\u001b[0;32m   1151\u001b[0m \u001b[39mif\u001b[39;00m plt \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   1152\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m   1153\u001b[0m         \u001b[39m# we need this import check here to re-raise if the\u001b[39;00m\n\u001b[0;32m   1154\u001b[0m         \u001b[39m# user does not have the libraries to support their\u001b[39;00m\n\u001b[0;32m   1155\u001b[0m         \u001b[39m# chosen backend installed.\u001b[39;00m\n\u001b[1;32m-> 1156\u001b[0m         plt\u001b[39m.\u001b[39;49mswitch_backend(name)\n\u001b[0;32m   1157\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m:\n\u001b[0;32m   1158\u001b[0m         \u001b[39mif\u001b[39;00m force:\n",
+            "File \u001b[1;32mc:\\Users\\Gasper Krevs\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\matplotlib\\pyplot.py:265\u001b[0m, in \u001b[0;36mswitch_backend\u001b[1;34m(newbackend)\u001b[0m\n\u001b[0;32m    262\u001b[0m         rcParamsOrig[\u001b[39m\"\u001b[39m\u001b[39mbackend\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39magg\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    263\u001b[0m         \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m--> 265\u001b[0m backend_mod \u001b[39m=\u001b[39m importlib\u001b[39m.\u001b[39;49mimport_module(\n\u001b[0;32m    266\u001b[0m     cbook\u001b[39m.\u001b[39;49m_backend_module_name(newbackend))\n\u001b[0;32m    268\u001b[0m required_framework \u001b[39m=\u001b[39m _get_required_interactive_framework(backend_mod)\n\u001b[0;32m    269\u001b[0m \u001b[39mif\u001b[39;00m required_framework \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+            "File \u001b[1;32mc:\\Users\\Gasper Krevs\\AppData\\Local\\Programs\\Python\\Python310\\lib\\importlib\\__init__.py:126\u001b[0m, in \u001b[0;36mimport_module\u001b[1;34m(name, package)\u001b[0m\n\u001b[0;32m    124\u001b[0m             \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m    125\u001b[0m         level \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m--> 126\u001b[0m \u001b[39mreturn\u001b[39;00m _bootstrap\u001b[39m.\u001b[39;49m_gcd_import(name[level:], package, level)\n",
+            "File \u001b[1;32m<frozen importlib._bootstrap>:1050\u001b[0m, in \u001b[0;36m_gcd_import\u001b[1;34m(name, package, level)\u001b[0m\n",
+            "File \u001b[1;32m<frozen importlib._bootstrap>:1027\u001b[0m, in \u001b[0;36m_find_and_load\u001b[1;34m(name, import_)\u001b[0m\n",
+            "File \u001b[1;32m<frozen importlib._bootstrap>:1006\u001b[0m, in \u001b[0;36m_find_and_load_unlocked\u001b[1;34m(name, import_)\u001b[0m\n",
+            "File \u001b[1;32m<frozen importlib._bootstrap>:688\u001b[0m, in \u001b[0;36m_load_unlocked\u001b[1;34m(spec)\u001b[0m\n",
+            "File \u001b[1;32m<frozen importlib._bootstrap_external>:883\u001b[0m, in \u001b[0;36mexec_module\u001b[1;34m(self, module)\u001b[0m\n",
+            "File \u001b[1;32m<frozen importlib._bootstrap>:241\u001b[0m, in \u001b[0;36m_call_with_frames_removed\u001b[1;34m(f, *args, **kwds)\u001b[0m\n",
+            "File \u001b[1;32mc:\\Users\\Gasper Krevs\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\matplotlib\\backends\\backend_tkcairo.py:6\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m _backend_tk\n\u001b[1;32m----> 6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mbackend_cairo\u001b[39;00m \u001b[39mimport\u001b[39;00m cairo, FigureCanvasCairo\n\u001b[0;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m_backend_tk\u001b[39;00m \u001b[39mimport\u001b[39;00m _BackendTk, FigureCanvasTk\n\u001b[0;32m     10\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mFigureCanvasTkCairo\u001b[39;00m(FigureCanvasCairo, FigureCanvasTk):\n",
+            "File \u001b[1;32mc:\\Users\\Gasper Krevs\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\matplotlib\\backends\\backend_cairo.py:23\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[39mimport\u001b[39;00m \u001b[39mcairocffi\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mcairo\u001b[39;00m\n\u001b[0;32m     22\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mImportError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m---> 23\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\n\u001b[0;32m     24\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mcairo backend requires that pycairo>=1.14.0 or cairocffi \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     25\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mis installed\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m     27\u001b[0m \u001b[39mimport\u001b[39;00m matplotlib \u001b[39mas\u001b[39;00m mpl\n\u001b[0;32m     28\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39m.\u001b[39;00m \u001b[39mimport\u001b[39;00m _api, cbook, font_manager\n",
+            "\u001b[1;31mImportError\u001b[0m: cairo backend requires that pycairo>=1.14.0 or cairocffi is installed"
+          ]
+        }
+      ],
       "source": [
         "# TODO\n",
         "import matplotlib\n",
@@ -308,7 +343,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -631,7 +666,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+      "version": "3.10.1"
     },
     "vscode": {
       "interpreter": {
